--- a/packages/commonwealth/client/styles/components/Profile/Profile.scss
+++ b/packages/commonwealth/client/styles/components/Profile/Profile.scss
@@ -11,7 +11,7 @@
   }
 
   .header {
-    margin: 0px 80px;
+    margin: 16px 80px;
     padding: 16px 0 0px 0px;
     @include mediumInclusive {
       margin: 80px 72px;
