--- a/packages/commonwealth/client/styles/pages/user_dashboard/dashboard_communities_preview.scss
+++ b/packages/commonwealth/client/styles/pages/user_dashboard/dashboard_communities_preview.scss
@@ -41,7 +41,7 @@
   position: fixed;
   right: 50px;
   float: right;
-  top: 70px;
+  top: 80px;
   z-index: 1;
 
   @include mediumSmallInclusive {
